--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ uvicorn>=0.15.0
 pandas>=1.3.2
 click>=8.0.3
 scikit-learn>=1.0.1
+matplotlib>=3.4.3
+plotly>=5.3.1
+ipython>=7.29.0
+seaborn>=0.11.2
